[metadata]
name = respyte
author = Noah Ginsburg
author_email = ginsburgnm@gmail.com
url = https://github.com/ginsburgnm/respyte
description = respyte tui
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLV3
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
scripts =
    bin/respyte

[versioneer]
VCS = git
style = pep440
versionfile_source = librespyte/_version.py
versionfile_build = librespyte/_version.py
tag_prefix = 
parentdir_prefix = librespyte
